implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/fail_if_function_is_not_async.stderr
error: the `async` keyword is missing from the function declaration
 --> $DIR/fail_if_function_is_not_async.rs:5:1
  |
5 | fn my_test(c: ockam::Context) -> ockam::Result<()> {
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fail_if_function_is_not_async.rs:4:1
  |
4 | / #[ockam_node_test_attribute::node_test]
5 | | fn my_test(c: ockam::Context) -> ockam::Result<()> {
6 | |     c.stop().await.unwrap();
7 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/fail_if_function_is_not_async.rs`
